contrast issues fixed

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -67,17 +67,13 @@ main a{
     color: white;
 }
 
-.firstcolor{
-    color: #767676;
-}
 
-.secondcolor{
+
+.color{
     color: #213547;
 }
 
-.thirdcolor{
-    color: #42b883;
-}
+
 
 footer{
     font-family: 'Assistant', sans-serif;
